# hhru-superjob-parser

./: README.md  main.py  pyproject.toml  requirements.txt
data/: featured_vacancies.json
main/: main.py
src/: base_class_for_api.py  base_json_saver.py  head_hunter_api.py  json_saver.py  super_job_api.py  table_creator.py  vacancy.py
utils/: utils.py
